# tree-sitter-haproxy

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_haproxy/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterHAProxyTests/: TreeSitterHAProxyTests.swift
src/: grammar.json  node-types.json  parser.c
test/: test.cfg
